--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -8,63 +9,76 @@
 </head>
 
 <body>
-    <div ng-app ng:controller="TodosController">
-        <input type="text" ng-model="todoName" size="30" placeholder="Enter your todo here" ng:required /> estimation:
-        <select name="todoEstimate">
-            <option ng:repeat="estimate in estimates" value="{{estimate}}">{{estimate}}</option>
-        </select>
-        <button ng:click="addTodo()">Add</button>
 
-        <div class="tasks" ng:show="(todos | filter:{done: false} ).length > 0">
-            <b>Tasks to do:</b>
-            <ul ng:repeat="todo in todos | filter:{done: false}">
-                <li>
-                    <div ng:controller="TodoEditorController">
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+
+    <div class="crud_body">
+        <div ng-app ng:controller="TodosController">
+            <input type="text" ng-model="id" size="30" placeholder="Enter your todo here" ng:required />
+            <input type="text" ng-model="name" size="30" placeholder="Enter your todo here" ng:required />
+            <input type="text" ng-model="destination" size="30" placeholder="Enter your todo here" ng:required />
+            <input type="text" ng-model="creation_date" size="30" placeholder="Enter your todo here" ng:required />
+            <input type="text" ng-model="client_id" size="30" placeholder="Enter your todo here" ng:required /> estimation:
+            <select name="todoEstimate">
+                <option ng:repeat="estimate in estimates" value="{{estimate}}">{{estimate}}</option>
+            </select>
+            <button ng:click="addTodo()">Add</button>
+
+            <div class="tasks" ng:show="(todos | filter:{done: false} ).length > 0">
+                <b>Tasks to do:</b>
+                <ul ng:repeat="todo in todos | filter:{done: false}">
+                    <li>
+                        <div ng:controller="TodoEditorController">
+                            <button ng:click="todos.splice($index, 1)">Delete</button>
+                            <button ng:click="todo.done = true">Done</button>
+                            <span ng:hide="editorEnabled" ng:click="enableEditor()">
+                            <b>{{todo.name}}</b> ({{todo.estimate}})
+                        </span>
+
+                            <span ng:show="editorEnabled">
+                            <input type="text" size="30" name="id" ng:required ng-model="id" />
+                            <input type="text" size="30" name="name" ng:required ng-model="name" />
+                            <input type="text" size="30" name="destination" ng:required ng-model="destination" />
+                            <input type="text" size="30" name="creation_date" ng:required ng-model="creation_date" />
+                            <input type="text" size="30" name="client_id" ng:required ng-model="client_id" />
+                            <select name="todoEstimate" ng-options="estm for estm in estimates" ng-model="todoEstimate">
+                            </select>
+                            
+                            <button ng:click="save()">Ok</button>
+                            <button ng:click="disableEditor()">Cancel</button>
+                        </span>
+                        </div>
+
+                    </li>
+                </ul>
+                Total estimation: {{ sum(todos, false)}}
+            </div>
+
+            <div class="tasks" ng:show="(todos | filter:{done: true} ).length > 0">
+                <b>Done tasks:</b>
+                <ul ng:repeat="todo in todos | filter:{done: true}">
+                    <li>
                         <button ng:click="todos.splice($index, 1)">Delete</button>
-                        <button ng:click="todo.done = true">Done</button>
-                        <span ng:hide="editorEnabled" ng:click="enableEditor()">
-                        <b>{{todo.name}}</b> ({{todo.estimate}})
-                    </span>
+                        <button ng:click="todo.done = false">Not done</button>
 
-                        <span ng:show="editorEnabled">
-                        <input type="text" size="30" name="todoName" ng:required ng-model="todoName" />
-                        <select name="todoEstimate" ng-options="estm for estm in estimates" ng-model="todoEstimate">
-                        </select>
-                        
-                        <button ng:click="save()">Ok</button>
-                        <button ng:click="disableEditor()">Cancel</button>
-                    </span>
-                    </div>
+                        <span class="todo done"><b>{{todo.name}}</b> ({{todo.estimate}})</span>
+                    </li>
+                </ul>
+                Total estimation: {{sum(todos, true)}}
+            </div>
 
-                </li>
-            </ul>
-            Total estimation: {{ sum(todos, false)}}
-        </div>
-
-        <div class="tasks" ng:show="(todos | filter:{done: true} ).length > 0">
-            <b>Done tasks:</b>
-            <ul ng:repeat="todo in todos | filter:{done: true} | orderBy: {todo.name}">
-                <li>
-                    <button ng:click="todos.splice($index, 1)">Delete</button>
-                    <button ng:click="todo.done = false">Not done</button>
-
-                    <span class="todo done"><b>{{todo.name}}</b> ({{todo.estimate}})</span>
-                </li>
-            </ul>
-            Total estimation: {{sum(todos, true)}}
-        </div>
-
-        <div class="stats">
-            <div>All: {{todos.length}}</div>
-            <div>Incomplete: {{(todos | filter:{done: false}).length}}</div>
-            <div>Done: {{(todos | filter:{done: true}).length}}</div>
+            <div class="stats">
+                <div>All: {{todos.length}}</div>
+                <div>Incomplete: {{(todos | filter:{done: false}).length}}</div>
+                <div>Done: {{(todos | filter:{done: true}).length}}</div>
+            </div>
         </div>
     </div>
-    <!--
-    <hr /> Debug view:
-    <pre>
-        todos = {{todos}}
-    </pre>-->
 
 </body>
 
