--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
@@ -19,58 +27,92 @@
 
     <div class="crud_body">
         <div ng-app ng:controller="TodosController">
-            <input type="text" ng-model="id" size="30" placeholder="Enter your todo here" ng:required />
-            <input type="text" ng-model="name" size="30" placeholder="Enter your todo here" ng:required />
-            <input type="text" ng-model="destination" size="30" placeholder="Enter your todo here" ng:required />
-            <input type="text" ng-model="creation_date" size="30" placeholder="Enter your todo here" ng:required />
-            <input type="text" ng-model="client_id" size="30" placeholder="Enter your todo here" ng:required /> estimation:
-            <select name="todoEstimate">
-                <option ng:repeat="estimate in estimates" value="{{estimate}}">{{estimate}}</option>
-            </select>
-            <button ng:click="addTodo()">Add</button>
+            <div id="create_form">
+                <input class="form-control" type="text" ng-model="id" size="30" placeholder="Enter your todo here" ng:required />
+                <input class="form-control" type="text" ng-model="name" size="30" placeholder="Enter your todo here" ng:required />
+                <input class="form-control" type="text" ng-model="weight" size="30" placeholder="Enter your todo here" ng:required />
+                <input class="form-control" type="text" ng-model="destination" size="30" placeholder="Enter your todo here" ng:required />
+                <input class="form-control" type="text" ng-model="creation_date" size="30" placeholder="Enter your todo here" ng:required />
+                <input class="form-control" type="text" ng-model="client_id" size="30" placeholder="Enter your todo here" ng:required />
+                <button class="form-control" ng:click="addTodo()">Add</button>
+            </div>
 
             <div class="tasks" ng:show="(todos | filter:{done: false} ).length > 0">
                 <b>Tasks to do:</b>
-                <ul ng:repeat="todo in todos | filter:{done: false}">
-                    <li>
-                        <div ng:controller="TodoEditorController">
-                            <button ng:click="todos.splice($index, 1)">Delete</button>
-                            <button ng:click="todo.done = true">Done</button>
-                            <span ng:hide="editorEnabled" ng:click="enableEditor()">
-                            <b>{{todo.name}}</b> ({{todo.estimate}})
-                        </span>
 
-                            <span ng:show="editorEnabled">
-                            <input type="text" size="30" name="id" ng:required ng-model="id" />
-                            <input type="text" size="30" name="name" ng:required ng-model="name" />
-                            <input type="text" size="30" name="destination" ng:required ng-model="destination" />
-                            <input type="text" size="30" name="creation_date" ng:required ng-model="creation_date" />
-                            <input type="text" size="30" name="client_id" ng:required ng-model="client_id" />
-                            <select name="todoEstimate" ng-options="estm for estm in estimates" ng-model="todoEstimate">
-                            </select>
-                            
-                            <button ng:click="save()">Ok</button>
-                            <button ng:click="disableEditor()">Cancel</button>
-                        </span>
-                        </div>
+                <table class="table">
+                    <thead>
+                        <tr class="header_css">
+                            <th>id</th>
+                            <th>name</th>
+                            <th>weight</th>
+                            <th>destination</th>
+                            <th>creation_date</th>
+                            <th>client_id</th>
+                            <th>settings</th>
+                        </tr>
+                    </thead>
+                    <tbody ng:repeat="todo in todos | filter:{done: false}">
+                        <tr ng:controller="TodoEditorController">
+                            <td ng:hide="editorEnabled" ng:click="enableEditor()">{{todo.id}}</td>
+                            <td ng:hide="editorEnabled" ng:click="enableEditor()">{{todo.name}}</td>
+                            <td ng:hide="editorEnabled" ng:click="enableEditor()">{{todo.weight}}</td>
+                            <td ng:hide="editorEnabled" ng:click="enableEditor()">{{todo.destination}}</td>
+                            <td ng:hide="editorEnabled" ng:click="enableEditor()">{{todo.creation_date}}</td>
+                            <td ng:hide="editorEnabled" ng:click="enableEditor()">{{todo.client_id}}</td>
+                            <td ng:hide="editorEnabled"><button class="form-control" ng:click="todos.splice($index, 1)">Delete</button></td>
 
-                    </li>
-                </ul>
+                            <td ng:show="editorEnabled"><input class="form-control" type="text" size="30" name="id" ng:required ng-model="id" /></td>
+                            <td ng:show="editorEnabled"><input class="form-control" type="text" size="30" name="name" ng:required ng-model="name" /></td>
+                            <td ng:show="editorEnabled"><input class="form-control" type="text" size="30" name="weight" ng:required ng-model="weight" /></td>
+                            <td ng:show="editorEnabled"><input class="form-control" type="text" size="30" name="destination" ng:required ng-model="destination" /></td>
+                            <td ng:show="editorEnabled"><input class="form-control" type="text" size="30" name="creation_date" ng:required ng-model="creation_date" /></td>
+                            <td ng:show="editorEnabled"><input class="form-control" type="text" size="30" name="client_id" ng:required ng-model="client_id" /></td>
+
+                            <td ng:show="editorEnabled">
+                                <button class="form-control" ng:click="save()" style="float: left;float: left;width: 50%;">Ok</button>
+                                <button class="form-control" ng:click="disableEditor()" style="float: left;float: left;width: 50%;">Cancel</button>
+                            </td>
+                        </tr>
+                    </tbody>
+
+                    <!--<ul id="todo_ul">
+                        <li>
+                            <div ng:controller="TodoEditorController">
+                                <button ng:click="todos.splice($index, 1)">Delete</button>
+                                <span ng:hide="editorEnabled" ng:click="enableEditor()">
+                                    {{todo.id}} {{todo.name}} {{todo.weight}} {{todo.destination}} {{todo.creation_date}} {{todo.client_id}}
+                                </span>
+
+                                <span ng:show="editorEnabled">
+                                    <input type="text" size="30" name="id" ng:required ng-model="id" />
+                                    <input type="text" size="30" name="name" ng:required ng-model="name" />
+                                    <input type="text" size="30" name="weight" ng:required ng-model="weight" />
+                                    <input type="text" size="30" name="destination" ng:required ng-model="destination" />
+                                    <input type="text" size="30" name="creation_date" ng:required ng-model="creation_date" />
+                                    <input type="text" size="30" name="client_id" ng:required ng-model="client_id" />
+                                    
+                                    <button ng:click="save()">Ok</button>
+                                    <button ng:click="disableEditor()">Cancel</button>
+                                </span>
+                            </div>
+
+                        </li>
+                    </ul>-->
+                </table>
+
                 Total estimation: {{ sum(todos, false)}}
             </div>
 
-            <div class="tasks" ng:show="(todos | filter:{done: true} ).length > 0">
+            <!--<div class="tasks" ng:show="(todos | filter:{done: true} ).length > 0">
                 <b>Done tasks:</b>
                 <ul ng:repeat="todo in todos | filter:{done: true}">
                     <li>
                         <button ng:click="todos.splice($index, 1)">Delete</button>
                         <button ng:click="todo.done = false">Not done</button>
-
-                        <span class="todo done"><b>{{todo.name}}</b> ({{todo.estimate}})</span>
                     </li>
                 </ul>
-                Total estimation: {{sum(todos, true)}}
-            </div>
+            </div>-->
 
             <div class="stats">
                 <div>All: {{todos.length}}</div>
